@@ -152,6 +152,18 @@ ewl_box_set_spacing(Ewl_Widget * w, unsigned int s)
 	DLEAVE_FUNCTION;
 }
 
+void
+ewl_box_child_set_padding(Ewl_Widget * w, int xp, int yp)
+{
+	DENTER_FUNCTION;
+	DCHECK_PARAM_PTR("w", w);
+
+	ewl_widget_set_data(w, "/x_padding", (void *) xp);
+	ewl_widget_set_data(w, "/y_padding", (void *) yp);
+
+	DLEAVE_FUNCTION;
+}
+
 static void
 __ewl_box_realize(Ewl_Widget * w, void *ev_data, void *user_data)
 {
@@ -432,6 +444,7 @@ __ewl_hbox_configure_normal(Ewl_Widget * w, int *rh)
 	Ewl_Box *box;
 	Ewl_Widget *c;
 	int l = 0, r = 0, t = 0, b = 0;
+	int xp = 0, yp = 0;
 
 	DENTER_FUNCTION;
 	DCHECK_PARAM_PTR_RET("w", w, NULL);
@@ -447,6 +460,11 @@ __ewl_hbox_configure_normal(Ewl_Widget * w, int *rh)
 
 	while ((c = ewd_list_next(EWL_CONTAINER(w)->children)) != NULL)
 	  {
+		  xp = (int) ewl_widget_get_data(c, "/x_padding");
+		  yp = (int) ewl_widget_get_data(c, "/y_padding");
+
+		  printf("xp == %i yp == %i\n", xp, yp);
+
 		  if (EWL_OBJECT(w)->fill & EWL_FILL_POLICY_FILL)
 		    {
 			    if (!f)
@@ -458,7 +476,7 @@ __ewl_hbox_configure_normal(Ewl_Widget * w, int *rh)
 		    }
 
 		  if (MAXIMUM_W(c) > CURRENT_W(w))
-			  REQUEST_W(c) = CURRENT_W(w) - l - r;
+			  REQUEST_W(c) = CURRENT_W(w) - l - r - yp;
 		  else if (MINIMUM_W(c) > CURRENT_W(c))
 			  REQUEST_W(c) = MINIMUM_W(c);
 		  else
@@ -466,7 +484,7 @@ __ewl_hbox_configure_normal(Ewl_Widget * w, int *rh)
 
 		  REQUEST_H(c) = CURRENT_H(c);
 
-		  *rh -= REQUEST_H(c) - box->spacing;;
+		  *rh -= REQUEST_H(c) - box->spacing - yp;
 	  }
 
 	return f;
@@ -480,6 +498,7 @@ __ewl_hbox_configure_fillers(Ewl_Widget * w, Ewd_List * f, int rh)
 	Ewl_Box *b;
 	Ewl_Widget *c;
 	int nh, ll = 0, rr = 0, tt = 0, bb = 0;
+	int xp, yp;
 
 	DENTER_FUNCTION;
 	DCHECK_PARAM_PTR("w", w);
@@ -495,15 +514,18 @@ __ewl_hbox_configure_fillers(Ewl_Widget * w, Ewd_List * f, int rh)
 
 	while ((c = ewd_list_next(f)) != NULL)
 	  {
+		  xp = (int) ewl_widget_get_data(c, "/x_padding");
+		  yp = (int) ewl_widget_get_data(c, "/y_padding");
+
 		  if (MAXIMUM_W(c) < REQUEST_W(w) - ll - rr)
 			  REQUEST_W(c) = MAXIMUM_W(w);
 		  else
-			  REQUEST_W(c) = REQUEST_W(w) - ll - rr;
+			  REQUEST_W(c) = REQUEST_W(w) - ll - rr - xp;
 
 		  if (MAXIMUM_H(c) < nh)
 			  REQUEST_H(c) = MAXIMUM_H(c);
 		  else
-			  REQUEST_H(c) = nh;
+			  REQUEST_H(c) = nh - yp;
 	  }
 
 	DLEAVE_FUNCTION;
@@ -515,6 +537,7 @@ __ewl_hbox_layout_children(Ewl_Widget * w)
 	Ewl_Box *box;
 	Ewl_Widget *c;
 	int y, l = 0, r = 0, t = 0, b = 0;
+	int xp, yp;
 
 	DENTER_FUNCTION;
 	DCHECK_PARAM_PTR("w", w);
@@ -534,27 +557,25 @@ __ewl_hbox_layout_children(Ewl_Widget * w)
 
 	while ((c = ewd_list_next(EWL_CONTAINER(w)->children)) != NULL)
 	  {
+		  xp = (int) ewl_widget_get_data(c, "/x_padding");
+		  yp = (int) ewl_widget_get_data(c, "/y_padding");
+
 		  if (EWL_OBJECT(c)->align == EWL_ALIGNMENT_LEFT)
-		    {
-			    REQUEST_X(c) =
-				    REQUEST_X(w) + l; 
-		    }
+			    REQUEST_X(c) = REQUEST_X(w) + l + xp;
 		  else if (EWL_OBJECT(c)->align == EWL_ALIGNMENT_RIGHT)
 		    {
-			    REQUEST_X(c) =
-				    (REQUEST_X(w) + REQUEST_W(w)) -
-				    REQUEST_W(c) - r;
+			    REQUEST_X(c) = (REQUEST_X(w) + REQUEST_W(w)) -
+				    REQUEST_W(c) - r + xp;
 		    }
                   else
                     {
-                            REQUEST_X(c) = REQUEST_X(w);
-                            REQUEST_X(c) +=
-                                    (REQUEST_W(w) / 2) -
-                                    (REQUEST_W(c)) / 2;
+                            REQUEST_X(c) = REQUEST_X(w) + xp;
+                            REQUEST_X(c) += (REQUEST_W(w) / 2) -
+			    			(REQUEST_W(c)) / 2;
                     }
 
-		  REQUEST_Y(c) = y + box->spacing;
-		  y += REQUEST_H(c)  +box->spacing;
+		  REQUEST_Y(c) = y + box->spacing + yp;
+		  y += REQUEST_H(c)  + box->spacing + yp;
 
 		  ewl_widget_configure(c);
 	  }
@@ -656,6 +677,7 @@ __ewl_vbox_configure_normal(Ewl_Widget * w, int *rw)
 	Ewl_Box *box;
 	Ewl_Widget *c;
 	int ll = 0, rr = 0, tt = 0, bb = 0;
+	int xp, yp;
 
 	DENTER_FUNCTION;
 	DCHECK_PARAM_PTR_RET("w", w, NULL);
@@ -671,6 +693,9 @@ __ewl_vbox_configure_normal(Ewl_Widget * w, int *rw)
 
 	while ((c = ewd_list_next(EWL_CONTAINER(w)->children)) != NULL)
 	  {
+		xp = (int) ewl_widget_get_data(c, "/x_padding");
+		yp = (int) ewl_widget_get_data(c, "/y_padding");
+
 		  if (EWL_OBJECT(c)->fill & EWL_FILL_POLICY_FILL)
 		    {
 			    if (!f)
@@ -682,13 +707,15 @@ __ewl_vbox_configure_normal(Ewl_Widget * w, int *rw)
 		    }
 
 		  if (MAXIMUM_H(c) < REQUEST_H(w) - tt - bb)
-			  REQUEST_H(c) = MAXIMUM_H(c);
+			  REQUEST_H(c) = MAXIMUM_H(c) - yp;
+		  else if (MINIMUM_W(c) > REQUEST_W(w))
+		  	  REQUEST_W(c) = MINIMUM_W(c);
 		  else
-			  REQUEST_H(c) = REQUEST_H(c) - tt - bb;
+			  REQUEST_H(c) = REQUEST_H(w) - tt - bb - yp;
 
 		  REQUEST_W(c) = CURRENT_W(c);
 
-		  *rw -= REQUEST_W(c) + box->spacing;
+		  *rw -= REQUEST_W(c) + box->spacing - xp;
 	  }
 
 	return f;
@@ -702,6 +729,7 @@ __ewl_vbox_configure_fillers(Ewl_Widget * w, Ewd_List * f, int rw)
 	Ewl_Box *box;
 	Ewl_Widget *c;
 	int nw, l = 0, r = 0, t = 0, b = 0;
+	int xp, yp;
 
 	DENTER_FUNCTION;
 	DCHECK_PARAM_PTR("w", w);
@@ -717,15 +745,18 @@ __ewl_vbox_configure_fillers(Ewl_Widget * w, Ewd_List * f, int rw)
 
 	while ((c = ewd_list_next(f)) != NULL)
 	  {
+		  xp = (int) ewl_widget_get_data(c, "/x_padding");
+		  yp = (int) ewl_widget_get_data(c, "/y_padding");
+
 		  if (MAXIMUM_H(c) <= REQUEST_H(w))
-			  REQUEST_H(c) = REQUEST_H(w) - t - b;
+			  REQUEST_H(c) = REQUEST_H(w) - t - b - yp;
 		  else
 			  REQUEST_H(c) = MAXIMUM_H(c);
 
 		  if (MAXIMUM_W(c) <= nw)
 			  REQUEST_W(c) = MAXIMUM_W(c);
 		  else
-			  REQUEST_W(c) = nw;
+			  REQUEST_W(c) = nw - xp;
 	  }
 
 	DLEAVE_FUNCTION;
@@ -737,6 +768,7 @@ __ewl_vbox_layout_children(Ewl_Widget * w)
 	Ewl_Box *box;
 	Ewl_Widget *c;
 	int x, l = 0, r = 0, t = 0, b = 0;
+	int xp, yp;
 
 	DENTER_FUNCTION;
 	DCHECK_PARAM_PTR("w", w);
@@ -752,19 +784,23 @@ __ewl_vbox_layout_children(Ewl_Widget * w)
 
 	while ((c = ewd_list_next(EWL_CONTAINER(w)->children)) != NULL)
 	  {
+		  xp = (int) ewl_widget_get_data(c, "/x_padding");
+		  yp = (int) ewl_widget_get_data(c, "/y_padding");
+
 		  if (EWL_OBJECT(c)->align == EWL_ALIGNMENT_TOP)
-			  REQUEST_Y(c) = REQUEST_Y(w) + t;
+			  REQUEST_Y(c) = REQUEST_Y(w) + t + yp;
                   else if (EWL_OBJECT(c)->align == EWL_ALIGNMENT_RIGHT)
                           REQUEST_Y(c) = (REQUEST_Y(w) + REQUEST_H(w)) -
-                                  REQUEST_H(c) - r;
+                                  REQUEST_H(c) - r + yp;
 		  else
 		    {
-			    REQUEST_Y(c) = REQUEST_Y(w);
+			    REQUEST_Y(c) = REQUEST_Y(w) + yp;
 			    REQUEST_Y(c) += (REQUEST_H(w) / 2) -
 			    			(REQUEST_H(c) / 2);
 		    }
-		  REQUEST_X(c) = x + box->spacing;
-		  x += REQUEST_W(c) + box->spacing;
+
+		  REQUEST_X(c) = x + box->spacing + xp;
+		  x += REQUEST_W(c) + box->spacing + xp;
 
 		  ewl_widget_configure(c);
 	  }
